--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,39 +1,15 @@
-name: Build and Push Image to ECR
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-on:
-  push:
-    branches:
-      - main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-permissions:
-  id-token: write
-  contents: read
-
-env:
-  AWS_REGION: eu-west-1
-  ECR_REPOSITORY: sre-app
-  IMAGE_TAG: latest
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::344887510222:role/GitHubActionsECRRole
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build and push image
+      - name: Build and push ARM64 image
         uses: docker/build-push-action@v5
         with:
           context: ./app
+          platforms: linux/arm64
           push: true
-          tags: 344887510222.dkr.ecr.eu-west-1.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          tags: |
+            344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
+
