--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,12 +4,15 @@
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push ARM64 image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./app
-          platforms: linux/arm64
-          push: true
-          tags: |
-            344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
+      - name: Login to Amazon ECR
+  uses: aws-actions/amazon-ecr-login@v2
+
+- name: Build and push ARM64 image
+  uses: docker/build-push-action@v5
+  with:
+    context: ./app
+    push: true
+    platforms: linux/arm64
+    tags: 344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
+
 
