--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,18 +1,41 @@
+name: Build ARM64 image and push to ECR
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Amazon ECR
-  uses: aws-actions/amazon-ecr-login@v2
+      - name: Build and push ARM64 image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app
+          push: true
+          platforms: linux/arm64
+          tags: 344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
 
-- name: Build and push ARM64 image
-  uses: docker/build-push-action@v5
-  with:
-    context: ./app
-    push: true
-    platforms: linux/arm64
-    tags: 344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
 
 
