--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::344887510222:role/GitHubActionsECRRole
           aws-region: eu-west-1
 
       - name: Login to Amazon ECR
@@ -36,6 +39,4 @@ jobs:
           push: true
           platforms: linux/arm64
           tags: 344887510222.dkr.ecr.eu-west-1.amazonaws.com/sre-app:latest
-
-
 
